--- a/indexnewsletter.html
+++ b/indexnewsletter.html
@@ -85,10 +85,8 @@
              style="display:block; width:100%; height:300px; object-fit:cover; line-height:0; border:0;">
       </td>
     </tr>
- 
-    <!-- Rodapé principal -->
-    <tr>
-	<!-- CTA – Agendar Reunião -->
+
+<!-- CTA – Agendar Reunião -->
 <tr>
   <td style="padding:32px 24px; text-align:center;">
     
@@ -116,6 +114,8 @@
   </td>
 </tr>
 
+    <!-- Rodapé principal -->
+    <tr>
       <td style="padding:32px 24px; text-align:center; background:#ffffff; font-family:'Inter', Arial, sans-serif;">
         <div style="font-size:16px; font-weight:700; color:#000;">
           Mars Shot - AI Hub by Unicorn Factory
@@ -137,13 +137,13 @@
     <tr>
       <td style="padding:16px 0 32px 0; text-align:center; background:#ffffff;">
         <a href="https://www.linkedin.com/company/marsshoteu/posts/?feedView=all" target="_blank" rel="noopener" style="display:inline-block;">
-          <img border="0" width="24" height="24" src="https://cdn-icons-png.flaticon.com/512/145/145807.png" alt="LinkedIn" style="border:0;">
+          <img border="0" width="24" height="24" src="https://lh3.googleusercontent.com/d/1ImcPj8uehSaAHg5FbsVWDi0jEbbW0f-R" alt="LinkedIn" style="border:0;">
         </a>&nbsp;
         <a href="https://wa.me/351916084991" target="_blank" rel="noopener" style="display:inline-block;">
-          <img border="0" width="24" height="24" src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" style="border:0;">
+          <img border="0" width="24" height="24" src="https://lh3.googleusercontent.com/d/1ArxuqMaQ2sHx95pEZiUG1HfVjS2vmMR-" alt="WhatsApp" style="border:0;">
         </a>&nbsp;
         <a href="https://www.youtube.com/@wearemarsshot" target="_blank" rel="noopener" style="display:inline-block;">
-          <img border="0" width="24" height="24" src="https://cdn-icons-png.flaticon.com/512/174/174883.png" alt="YouTube" style="border:0;">
+          <img border="0" width="24" height="24" src="https://lh3.googleusercontent.com/d/1lh3DokNycgxx-yB4pWT9OG9ZOAjIiiSP" alt="YouTube" style="border:0;">
         </a>
       </td>
     </tr>
