--- a/indexnewsletter.html
+++ b/indexnewsletter.html
@@ -10,6 +10,23 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
+
+<!--  coloca isto logo após a tag <head> -->
+<style>
+@font-face{
+  font-family:'Inter';
+  font-style:normal;
+  font-weight:400;
+  src:local('Inter'), url('https://fonts.gstatic.com/s/inter/v12/UcC4yU4...') format('woff2');
+}
+@font-face{
+  font-family:'Playfair Display';
+  font-style:normal;
+  font-weight:700;
+  src:local('Playfair Display Bold'), url('https://fonts.gstatic.com/s/playfairdisplay/v30/NUhfh5f...') format('woff2');
+}
+</style>
+
 <body style="margin:0; padding:0; background:#f5f5f5; font-family:'Inter', Arial, sans-serif;">
   <table role="presentation" cellspacing="0" cellpadding="0" border="0" style="width:100%; max-width:600px; margin:0 auto; background:#ffffff;">
     
@@ -93,7 +110,7 @@
     <!-- botão real em <a> dentro de <table> -->
     <table role="presentation" cellspacing="0" cellpadding="0" border="0" align="center">
       <tr>
-        <td bgcolor="#5b099b" style="border-radius:4px;">
+        <td bgcolor="#5b099b" style="border-radius:4px;" mso-padding-alt:0 28px 0 28px;>
           <a href="https://calendar.app.google/YJMqP9oV27dJ24PYA"
              target="_blank" rel="noopener"
              style="
@@ -133,20 +150,21 @@
       </td>
     </tr>
 
-    <!-- Ícones sociais -->
-    <tr>
-      <td style="padding:16px 0 32px 0; text-align:center; background:#ffffff;">
-        <a href="https://www.linkedin.com/company/marsshoteu/posts/?feedView=all" target="_blank" rel="noopener" style="display:inline-block;">
-          <img border="0" width="24" height="24" src="https://lh3.googleusercontent.com/d/1ImcPj8uehSaAHg5FbsVWDi0jEbbW0f-R" alt="LinkedIn" style="border:0;">
-        </a>&nbsp;
-        <a href="https://wa.me/351916084991" target="_blank" rel="noopener" style="display:inline-block;">
-          <img border="0" width="24" height="24" src="https://lh3.googleusercontent.com/d/1ArxuqMaQ2sHx95pEZiUG1HfVjS2vmMR-" alt="WhatsApp" style="border:0;">
-        </a>&nbsp;
-        <a href="https://www.youtube.com/@wearemarsshot" target="_blank" rel="noopener" style="display:inline-block;">
-          <img border="0" width="24" height="24" src="https://lh3.googleusercontent.com/d/1lh3DokNycgxx-yB4pWT9OG9ZOAjIiiSP" alt="YouTube" style="border:0;">
-        </a>
-      </td>
-    </tr>
+<!-- Ícones sociais -->
+<tr>
+  <td style="padding:16px 0 32px 0;text-align:center;background:#ffffff;font-size:0;line-height:0;">
+    <a href="https://www.linkedin.com/company/marsshoteu/posts/?feedView=all" target="_blank" rel="noopener" style="display:inline-block;">
+      <img src="https://lh3.googleusercontent.com/d/1ImcPj8uehSaAHg5FbsVWDi0jEbbW0f-R=s24" alt="LinkedIn" width="24" height="24" style="border:0;display:block;">
+    </a>
+    <a href="https://wa.me/351916084991" target="_blank" rel="noopener" style="display:inline-block;">
+      <img src="https://lh3.googleusercontent.com/d/1ArxuqMaQ2sHx95pEZiUG1HfVjS2vmMR-=s24" alt="WhatsApp" width="24" height="24" style="border:0;display:block;">
+    </a>
+    <a href="https://www.youtube.com/@wearemarsshot" target="_blank" rel="noopener" style="display:inline-block;">
+      <img src="https://lh3.googleusercontent.com/d/1lh3DokNycgxx-yB4pWT9OG9ZOAjIiiSP=s24" alt="YouTube" width="24" height="24" style="border:0;display:block;">
+    </a>
+  </td>
+</tr>
+
 
   </table>
 </body>
