--- a/indexnewsletter.html
+++ b/indexnewsletter.html
@@ -97,7 +97,7 @@
     <!-- Banner do Hugo -->
     <tr>
       <td style="padding:0; text-align:center;">
-        <img src="https://lh3.googleusercontent.com/d/10ujkC0j_h-WGK2HmM1J4KbnoWxSzLQFh"
+        <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/hugo_banner.png"
              alt="Fotografia de Hugo"
              style="display:block; width:100%; height:300px; object-fit:cover; line-height:0; border:0;">
       </td>
@@ -154,13 +154,13 @@
 <tr>
   <td style="padding:16px 0 32px 0;text-align:center;background:#ffffff;font-size:0;line-height:0;">
     <a href="https://www.linkedin.com/company/marsshoteu/posts/?feedView=all" target="_blank" rel="noopener" style="display:inline-block;">
-      <img src="https://lh3.googleusercontent.com/d/1ImcPj8uehSaAHg5FbsVWDi0jEbbW0f-R=s24" alt="LinkedIn" width="24" height="24" style="border:0;display:block;">
+      <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-linkedin-50.png" alt="LinkedIn" width="24" height="24" style="border:0;display:block;">
     </a>
     <a href="https://wa.me/351916084991" target="_blank" rel="noopener" style="display:inline-block;">
-      <img src="https://lh3.googleusercontent.com/d/1ArxuqMaQ2sHx95pEZiUG1HfVjS2vmMR-=s24" alt="WhatsApp" width="24" height="24" style="border:0;display:block;">
+      <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-whatsapp-50.png" alt="WhatsApp" width="24" height="24" style="border:0;display:block;">
     </a>
     <a href="https://www.youtube.com/@wearemarsshot" target="_blank" rel="noopener" style="display:inline-block;">
-      <img src="https://lh3.googleusercontent.com/d/1lh3DokNycgxx-yB4pWT9OG9ZOAjIiiSP=s24" alt="YouTube" width="24" height="24" style="border:0;display:block;">
+      <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-youtube-50.png" alt="YouTube" width="24" height="24" style="border:0;display:block;">
     </a>
   </td>
 </tr>
