--- a/indexnewsletter.html
+++ b/indexnewsletter.html
@@ -26,20 +26,24 @@
     </td>
   </tr>
 
-  <!-- Título principal -->
+  <!-- Título principal 
   <tr>
     <td style="padding:30px 30px 0 30px;text-align:left;">
       <h2 style="margin:0;font-family:'Playfair Display',Georgia,serif;font-size:22px;font-weight:700;color:#222;">
         Qual o impacto da Transformação Digital nos RH?
       </h2>
     </td>
-  </tr>
+  </tr> -->
 
   <!-- Conteúdo principal & lista -->
   <tr>
     <td style="padding:20px 30px 30px 30px;font-size:16px;line-height:1.6;color:#222;">
-      <div style="font-weight:700;font-size:18px;margin-bottom:16px;">
+<!---      <div style="font-weight:700;font-size:18px;margin-bottom:16px;">
         SOLUÇÕES para o Departamento de RH:
+      </div> ---!>
+	  
+<div style="font-weight:700;font-size:18px;margin-bottom:16px;">
+         Qual o impacto da Transformação Digital nos RH?
       </div>
 
       <div style="margin-bottom:15px;">
@@ -91,7 +95,7 @@
   <tr>
     <td style="padding:0;text-align:center;">
       <!-- Substitua o link abaixo por uma foto corporativa, se o Hugo enviar -->
-      <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/hugo_banner.png"
+      <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/hugo_banner_2.png"
            alt="Hugo de Sousa"
            style="display:block;width:100%;height:300px;object-fit:cover;line-height:0;border:0;">
     </td>
