--- a/indexnewsletter.html
+++ b/indexnewsletter.html
@@ -33,14 +33,14 @@
         Qual o impacto da Transformação Digital nos RH?
       </h2>
     </td>
-  </tr> -->
+  </tr> --> 
 
   <!-- Conteúdo principal & lista -->
   <tr>
     <td style="padding:20px 30px 30px 30px;font-size:16px;line-height:1.6;color:#222;">
 <!---      <div style="font-weight:700;font-size:18px;margin-bottom:16px;">
         SOLUÇÕES para o Departamento de RH:
-      </div> ---!>
+      </div> --->
 	  
 <div style="font-weight:700;font-size:18px;margin-bottom:16px;">
          Qual o impacto da Transformação Digital nos RH?
@@ -48,7 +48,7 @@
 
       <div style="margin-bottom:15px;">
         <span style="color:#28a745;font-size:18px;margin-right:8px;">✓</span>
-        <strong>Triagem inteligente de currículos</strong> — IA, em conformidade com o AI Act, lê, pontua e gera <em>short-list</em> em segundos
+        <strong>Triagem inteligente de currículos</strong> — IA, em conformidade com o AI Act, lê, pontua e gera <em>short-list</em> em segundos.
       </div>
 
       <div style="margin-bottom:15px;">
@@ -58,7 +58,7 @@
 
       <div style="margin-bottom:15px;">
         <span style="color:#28a745;font-size:18px;margin-right:8px;">✓</span>
-        <strong>Folha salarial &amp; compliance laboral</strong> — extração de dados, cálculos automáticos e validação contra legislação atualizada
+        <strong>Folha salarial &amp; compliance laboral</strong> — extração de dados, cálculos automáticos e validação contra legislação atualizada.
       </div>
 
       <div style="margin-bottom:15px;">
@@ -73,12 +73,12 @@
 
       <div style="margin-bottom:15px;">
         <span style="color:#28a745;font-size:18px;margin-right:8px;">✓</span>
-        <strong>Formação &amp; desenvolvimento orientados por IA</strong> — recomendações de <em>up-/reskilling</em> personalizadas
+        <strong>Formação &amp; desenvolvimento orientados por IA</strong> — recomendações de <em>up-/reskilling</em> personalizadas.
       </div>
 
       <div style="margin-bottom:15px;">
         <span style="color:#28a745;font-size:18px;margin-right:8px;">✓</span>
-        <strong>Previsão de turnover</strong> — modelos preditivos que sinalizam colaboradores em risco
+        <strong>Previsão de turnover</strong> — modelos preditivos que sinalizam colaboradores em risco.
       </div>
 
       <div style="font-weight:700;font-size:18px;margin-top:30px;margin-bottom:15px;color:#222;">
@@ -100,6 +100,14 @@
            style="display:block;width:100%;height:300px;object-fit:cover;line-height:0;border:0;">
     </td>
   </tr>
+  
+  <!-- Legenda da fotografia -->
+<tr>
+  <td style="padding:8px 24px 0 24px; text-align:center; font-family:'Inter', Arial, sans-serif; font-size:14px; color:#666;">
+    Mars Shot&nbsp;-&nbsp;CEO&nbsp;-&nbsp;Hugo de Sousa
+  </td>
+</tr>
+
 
   <!-- CTA – Agendar Reunião -->
   <tr>
@@ -117,15 +125,32 @@
     </td>
   </tr>
 
-  <!-- Rodapé -->
-  <tr>
-    <td style="padding:32px 24px;text-align:center;background:#ffffff;font-family:'Inter',Arial,sans-serif;">
-      <div style="font-size:16px;font-weight:700;color:#000;">Mars Shot&nbsp;-&nbsp;AI Hub by Unicorn Factory</div>
-      <div style="font-size:16px;font-weight:700;color:#000;margin-top:2px;">Lisboa</div>
-      <div style="font-size:14px;color:#000;line-height:1.4;margin:8px 0 24px;">Rua João Saraiva&nbsp;38, 1700-051&nbsp;Lisboa, Portugal</div>
-      <a href="[PRIVACY_POLICY_URL]" target="_blank" rel="noopener" style="font-size:14px;color:#666;text-decoration:underline;">Unsubscribe</a>
-    </td>
-  </tr>
+<!-- Rodapé -->
+<tr>
+  <td style="padding:32px 24px;text-align:center;background:#ffffff;font-family:'Inter',Arial,sans-serif;">
+
+    <div style="font-size:16px;font-weight:700;color:#000;">
+      Mars Shot&nbsp;-&nbsp;AI Hub by Unicorn Factory Lisboa
+    </div>
+
+    <!-- Morada  – margem mais curta -->
+    <div style="font-size:14px;color:#000;line-height:1.4;margin:8px 0 4px;">
+      Rua João Saraiva&nbsp;38, 1700-051&nbsp;Lisboa, Portugal
+    </div>
+
+    <!-- Contactos – sem margem inferior extra -->
+    <div style="font-size:14px;color:#000;line-height:1.4;margin:0 0 16px;">
+      <a href="mailto:info@marsshot.eu" style="color:#000;text-decoration:none;">hugo@marsshot.eu</a>&nbsp;|&nbsp;
+      <a href="tel:+351916084991" style="color:#000;text-decoration:none;">+351&nbsp;925&nbsp;988&nbsp;322</a>
+    </div>
+
+    <a href="[PRIVACY_POLICY_URL]" target="_blank" rel="noopener"
+       style="font-size:14px;color:#666;text-decoration:underline;">
+      Unsubscribe
+    </a>
+  </td>
+</tr>
+
 
   <!-- Ícones sociais -->
   <tr>
