--- a/indexnewsletter.html
+++ b/indexnewsletter.html
@@ -101,9 +101,13 @@
     </td>
   </tr>
   
-  <!-- Legenda da fotografia -->
+<!-- Legenda da fotografia -->
 <tr>
-  <td style="padding:8px 24px 0 24px; text-align:center; font-family:'Inter', Arial, sans-serif; font-size:14px; color:#666;">
+  <!-- antes: padding:8px 24px 0 24px -->
+  <td style="padding:8px 24px 8px 24px;
+             text-align:center;
+             font-family:'Inter',Arial,sans-serif;
+             font-size:14px;color:#666;">
     Mars Shot&nbsp;-&nbsp;CEO&nbsp;-&nbsp;Hugo de Sousa
   </td>
 </tr>
@@ -111,7 +115,7 @@
 
   <!-- CTA – Agendar Reunião -->
   <tr>
-    <td style="padding:32px 24px;text-align:center;">
+    <td style="padding:24px 24px;text-align:center;">
       <table role="presentation" cellpadding="0" cellspacing="0" border="0" align="center">
         <tr>
           <td bgcolor="#5b099b" style="border-radius:4px;mso-padding-alt:0 28px 0 28px;">
