--- a/indexnewsletter.html
+++ b/indexnewsletter.html
@@ -144,8 +144,8 @@
 
     <!-- Contactos – sem margem inferior extra -->
     <div style="font-size:14px;color:#000;line-height:1.4;margin:0 0 16px;">
-      <a href="mailto:info@marsshot.eu" style="color:#000;text-decoration:none;">hugo@marsshot.eu</a>&nbsp;|&nbsp;
-      <a href="tel:+351916084991" style="color:#000;text-decoration:none;">+351&nbsp;925&nbsp;988&nbsp;322</a>
+      <a href="mailto:info@marsshot.eu" style="color:#000;text-decoration:none;">marcia@marsshot.eu</a>&nbsp;|&nbsp;
+      <a href="tel:+351916084991" style="color:#000;text-decoration:none;">+351&nbsp;918&nbsp;609&nbsp;598</a>
     </div>
 
     <a href="[PRIVACY_POLICY_URL]" target="_blank" rel="noopener"
