--- a/indexnewsletter.html
+++ b/indexnewsletter.html
@@ -85,7 +85,7 @@
         SOBRE A MARS SHOT
       </div>
 
-      <div style="text-align:justify;line-height:1.6;">
+	<div style="text-align:justify; line-height:1.6; font-size:14px;">
         Mars Shot – Redefining Limits tem como objetivo incrementar a rentabilidade através da transformação e da inovação orientada por IA. Pretendemos introduzir inteligência artificial nas organizações, com especial foco na área do desenvolvimento de software, permitindo não apenas ganhos significativos de produtividade, mas também a criação contínua de valor. Revolucionamos a forma como se faz transformação digital, tornando-a mais ágil, inteligente e sustentável.
       </div>
     </td>
