--- a/CIO/CIO_indexnewsletter.html
+++ b/CIO/CIO_indexnewsletter.html
@@ -157,11 +157,8 @@
     <td style="padding:32px 30px 30px 30px;font-size:16px;line-height:1.6;color:#222;" class="text">
       <h2 style="font-weight:700;font-size:20px;margin:0 0 16px 0;color:#222;">SOBRE A MARS SHOT</h2>
       <div style="text-align:justify;line-height:1.6;font-size:15px;">
-        Mars Shot – Redefining Limits tem como objetivo incrementar a rentabilidade através da transformação e da inovação orientada por IA. Pretendemos introduzir inteligência artificial nas organizações, com especial foco na área do desenvolvimento de software, permitindo não apenas ganhos significativos de produtividade, mas também a criação contínua de valor. Revolucionamos a forma como se faz transformação digital, tornando‑a mais á
-
-
-
-
+        Mars Shot – Redefining Limits tem como objetivo incrementar a rentabilidade através da transformação e da inovação orientada por IA. Pretendemos introduzir inteligência artificial nas organizações, com especial foco na área do desenvolvimento de software, permitindo não apenas ganhos significativos de produtividade, mas também a criação contínua de valor. Revolucionamos a forma como se faz transformação digital, tornando-a mais ágil, inteligente e sustentável.
+		
   <!-- Rodapé -->
   <tr>
     <td style="padding:32px 24px;text-align:center;background:#f5f5f5;font-family:'Inter',Arial,'Helvetica Neue',Helvetica,sans-serif;">
