--- a/CIO/CIO_indexnewsletter.html
+++ b/CIO/CIO_indexnewsletter.html
@@ -48,6 +48,7 @@
       <!-- Título da secção -->
       <h2 style="font-weight:700;text-align:center;font-size:20px;margin:0 0 24px 0;color:#222;">5 Maiores Dores de Cabeça do CIO/CTO</h2>
       <h2 style="font-weight:700;text-align:center;font-size:20px;margin:0 0 24px 0;color:#222;">Como é que a IA me pode ajudar?</h2>
+	 <!-- <p style="font-size:18px;text-align:center;margin:0 0 24px 0;color:#444;"><strong>Como é que a IA me pode ajudar?</strong></p> -->
 
       <!-- Cards dos desafios -->
       <table role="presentation" cellpadding="0" cellspacing="0" border="0" width="100%">
@@ -144,7 +145,7 @@
         <tr>
           <td bgcolor="#5b099b" style="border-radius:8px;mso-padding-alt:0 32px 0 32px;" class="btn-purple">
             <a href="https://calendar.app.google/YJMqP9oV27dJ24PYA" target="_blank" rel="noopener" style="display:inline-block;padding:16px 32px;font-family:'Inter',Arial,'Helvetica Neue',Helvetica,sans-serif;font-size:16px;font-weight:700;color:#ffffff;text-decoration:none;border-radius:8px;">
-              Agendar reunião de 30&nbsp;min&nbsp;Para&nbsp;Saber&nbsp;Mais
+              Agendar reunião de 30min&nbsp;Para&nbsp;Saber&nbsp;Mais
             </a>
           </td>
         </tr>
@@ -161,7 +162,7 @@
 		
   <!-- Rodapé -->
   <tr>
-    <td style="padding:32px 24px;text-align:center;background:#f5f5f5;font-family:'Inter',Arial,'Helvetica Neue',Helvetica,sans-serif;">
+    <td style="padding:32px 24px;text-align:center;background:#ffffff;font-family:'Inter',Arial,'Helvetica Neue',Helvetica,sans-serif;">
       <div style="font-size:16px;font-weight:700;color:#000;margin-bottom:8px;">Mars Shot - AI Hub by Unicorn Factory Lisboa</div>
       <div style="font-size:14px;color:#000;line-height:1.4;margin-bottom:4px;">Rua João Saraiva 38, 1700‑051 Lisboa, Portugal</div>
       <div style="font-size:14px;color:#000;line-height:1.4;margin-bottom:16px;">
@@ -174,9 +175,15 @@
 
   <!-- Ícones sociais -->
   <tr>
-    <td style="padding:16px 0 32px;text-align:center;background:#f5f5f5;font-size:0;line-height:0;">
-      <a href="https://www.linkedin.com/company/marsshoteu/posts/?feedView=all" target="_blank" rel="noopener" style="display:inline-block;margin:0 8px;">
+    <td style="padding:16px 0 32px;text-align:center;background:#ffffff;font-size:0;line-height:0;">
+      <a href="https://www.linkedin.com/company/marsshoteu/posts/?feedView=all" target="_blank" rel="noopener" style="display:inline-block;">
         <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-linkedin-50.png" alt="LinkedIn" width="24" height="24" style="border:0;display:block;">
       </a>
-      <a href="https://wa.me/351916084991" target="_blank" rel="noopener" style="display:inline-block;margin:0 8px;">
-        <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-whatsapp-50.png" alt="WhatsApp" width="24" height
+      <a href="https://wa.me/351916084991" target="_blank" rel="noopener" style="display:inline-block;">
+        <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-whatsapp-50.png" alt="WhatsApp" width="24" height="24" style="border:0;display:block;">
+      </a>
+      <a href="https://www.youtube.com/@wearemarsshot" target="_blank" rel="noopener" style="display:inline-block;">
+        <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-youtube-50.png" alt="YouTube" width="24" height="24" style="border:0;display:block;">
+      </a>
+    </td>
+  </tr>
