--- a/CIO/CIO_indexnewsletter.html
+++ b/CIO/CIO_indexnewsletter.html
@@ -110,7 +110,7 @@
           <td style="background:#faf8ff;border-radius:8px;padding:20px 24px;box-shadow:0 0 4px rgba(0,0,0,0.06);">
             <div style="font-weight:700;font-size:16px;margin-bottom:8px;">5. Risco elevado de adotar novas tecnologias (ex.: IA)</div>
             <div style="text-align:justify;font-size:15px;line-height:1.5;">
-              <strong>Problema:</strong> Muitos CIOs têm receio de apostar em IA sem governança, sem ROI claro ou sem saber por onde começar.<br>
+              <strong>Problema:</strong> Muitos CIOs e CTOs têm receio de apostar em IA sem governança, sem ROI claro ou sem saber por onde começar.<br>
               <strong>Solução Mars Shot:</strong> Ajuda a definir uma <strong>AI Strategy &amp; Governance</strong> clara, identificar casos de uso viáveis e executar projetos‑piloto de <strong>baixo risco e alto impacto</strong>, mostrando valor antes de escalar.
             </div>
           </td>
