--- a/TEMPLATE_NEWSLETTER.html
+++ b/TEMPLATE_NEWSLETTER.html
@@ -18,12 +18,14 @@
 	  <!-- Header principal -->
 	  <tr>
 		<td style="padding:40px 20px 24px 20px;text-align:center;background:#5b099b;">
-		  <div style="color:#ffffff;font-family:'Playfair Display',Georgia,serif;font-size:36px;font-weight:700;letter-spacing:1px;margin-bottom:4px;">
-			mars shot
-		  </div>	
-		  <div style="color:#e0d4ff;font-size:16px;letter-spacing:2px;text-transform:uppercase;margin-bottom:24px;">
-			REDEFINING LIMITS
-		  </div>
+		  <a href="https://marsshot.eu" target="_blank" rel="noopener" style="text-decoration:none;">
+			<div style="color:#ffffff;font-family:'Playfair Display',Georgia,serif;font-size:28px;font-weight:700;letter-spacing:1px;margin-bottom:4px;">
+			  mars shot
+			</div>	
+			<div style="color:#e0d4ff;font-size:14px;letter-spacing:2px;text-transform:uppercase;margin-bottom:24px;">
+			  REDEFINING LIMITS
+			</div>
+		  </a>
 
 		  <!-- CTA no topo 
 		  <table role="presentation" cellpadding="0" cellspacing="0" border="0" align="center" style="margin:0 auto;">
@@ -46,8 +48,8 @@
 		<td style="padding:0 30px 30px 30px;font-size:16px;line-height:1.6;color:#222;" class="text">
 
 		  <!-- Título da secção -->
-		  <h2 style="font-weight:700;text-align:center;font-size:20px;margin:0 0 24px 0;color:#222;">5 Maiores Dores de Cabeça do CIO/CTO</h2>
-		  <h2 style="font-weight:700;text-align:center;font-size:20px;margin:0 0 24px 0;color:#222;">Como é que a IA me pode ajudar?</h2>
+		  <h2 style="font-weight:700;text-align:center;font-size:18px;margin:0 0 20px 0;color:#222;">5 Maiores Dores de Cabeça do CIO/CTO</h2>
+		  <h2 style="font-weight:700;text-align:center;font-size:18px;margin:0 0 20px 0;color:#222;">Como é que a IA me pode ajudar?</h2>
 		 <!-- <p style="font-size:18px;text-align:center;margin:0 0 24px 0;color:#444;"><strong>Como é que a IA me pode ajudar?</strong></p> -->
 
 		  <!-- Cards dos desafios -->
@@ -56,8 +58,8 @@
 			<!-- Card 1 -->
 			<tr>
 			  <td style="background:#faf8ff;border-radius:8px;padding:20px 24px;box-shadow:0 0 4px rgba(0,0,0,0.06);">
-				<div style="font-weight:700;font-size:16px;margin-bottom:8px;">1. Projetos que demoram demasiado e não entregam valor</div>
-				<div style="text-align:justify;font-size:15px;line-height:1.5;">
+				<div style="font-weight:700;font-size:15px;margin-bottom:8px;">1. Projetos que demoram demasiado e não entregam valor</div>
+				<div style="text-align:justify;font-size:14px;line-height:1.5;">
 				  <strong>Problema:</strong> Iniciativas de transformação digital arrastam‑se por trimestres ou anos, sem retorno visível.<br>
 				  <strong>Solução Mars Shot:</strong> Entrega soluções em <strong>semanas, não trimestres</strong>, com equipas ágeis e foco no <strong>business value imediato</strong>, através de protótipos funcionais, IA‑first solutions e ciclos curtos de iteração.
 				</div>
@@ -69,8 +71,8 @@
 			<!-- Card 2 -->
 			<tr>
 			  <td style="background:#ffffff;border:1px solid #efe9ff;border-radius:8px;padding:20px 24px;box-shadow:0 0 4px rgba(0,0,0,0.04);">
-				<div style="font-weight:700;font-size:16px;margin-bottom:8px;">2. Dificuldade em mostrar impacto da tecnologia no negócio</div>
-				<div style="text-align:justify;font-size:15px;line-height:1.5;">
+				<div style="font-weight:700;font-size:15px;margin-bottom:8px;">2. Dificuldade em mostrar impacto da tecnologia no negócio</div>
+				<div style="text-align:justify;font-size:14px;line-height:1.5;">
 				  <strong>Problema:</strong> A tecnologia é vista como custo, não como alavanca de crescimento.<br>
 				  <strong>Solução Mars Shot:</strong> Parte do problema de negócio, não do código. Envolve stakeholders desde o início e entrega soluções com <strong>impacto visível</strong>, que criam engagement com o board e as equipas de negócio.
 				</div>
@@ -82,8 +84,8 @@
 			<!-- Card 3 -->
 			<tr>
 			  <td style="background:#faf8ff;border-radius:8px;padding:20px 24px;box-shadow:0 0 4px rgba(0,0,0,0.06);">
-				<div style="font-weight:700;font-size:16px;margin-bottom:8px;">3. Falta de talento para inovação e IA</div>
-				<div style="text-align:justify;font-size:15px;line-height:1.5;">
+				<div style="font-weight:700;font-size:15px;margin-bottom:8px;">3. Falta de talento para inovação e IA</div>
+				<div style="text-align:justify;font-size:14px;line-height:1.5;">
 				  <strong>Problema:</strong> É difícil recrutar, formar e reter talento que domine IA, inovação digital e novos paradigmas de desenvolvimento.<br>
 				  <strong>Solução Mars Shot:</strong> Leva <strong>equipas multidisciplinares prontas a executar</strong>, transfere know‑how para dentro da organização e forma os colaboradores ao <strong>longo do projeto</strong>, "learning by doing".
 				</div>
@@ -95,8 +97,8 @@
 			<!-- Card 4 -->
 			<tr>
 			  <td style="background:#ffffff;border:1px solid #efe9ff;border-radius:8px;padding:20px 24px;box-shadow:0 0 4px rgba(0,0,0,0.04);">
-				<div style="font-weight:700;font-size:16px;margin-bottom:8px;">4. Desconexão entre IT e as áreas de negócio</div>
-				<div style="text-align:justify;font-size:15px;line-height:1.5;">
+				<div style="font-weight:700;font-size:15px;margin-bottom:8px;">4. Desconexão entre IT e as áreas de negócio</div>
+				<div style="text-align:justify;font-size:14px;line-height:1.5;">
 				  <strong>Problema:</strong> Falta alinhamento e há frustração entre o que o negócio precisa e o que o IT entrega.<br>
 				  <strong>Solução Mars Shot:</strong> Trabalha <strong>com as duas frentes em conjunto</strong>, facilita co‑criação e assegura que as soluções nascem do diálogo entre tecnologia e negócio — com workshops, design sprints e governance claro.
 				</div>
@@ -108,8 +110,8 @@
 			<!-- Card 5 -->
 			<tr>
 			  <td style="background:#faf8ff;border-radius:8px;padding:20px 24px;box-shadow:0 0 4px rgba(0,0,0,0.06);">
-				<div style="font-weight:700;font-size:16px;margin-bottom:8px;">5. Risco elevado de adotar novas tecnologias (ex.: IA)</div>
-				<div style="text-align:justify;font-size:15px;line-height:1.5;">
+				<div style="font-weight:700;font-size:15px;margin-bottom:8px;">5. Risco elevado de adotar novas tecnologias (ex.: IA)</div>
+				<div style="text-align:justify;font-size:14px;line-height:1.5;">
 				  <strong>Problema:</strong> Muitos CIOs e CTOs têm receio de apostar em IA sem governança, sem ROI claro ou sem saber por onde começar.<br>
 				  <strong>Solução Mars Shot:</strong> Ajuda a definir uma <strong>AI Strategy &amp; Governance</strong> clara, identificar casos de uso viáveis e executar projetos‑piloto de <strong>baixo risco e alto impacto</strong>, mostrando valor antes de escalar.
 				</div>
@@ -133,7 +135,7 @@
 
 	  <!-- Legenda -->
 	  <tr>
-		<td style="padding:8px 24px;text-align:center;font-size:14px;color:#666;line-height:1.4;">
+		<td style="padding:8px 24px;text-align:center;font-size:12px;color:#666;line-height:1.4;">
 		  Mars Shot - CEO - Hugo de Sousa
 		</td>
 	  </tr>
@@ -156,9 +158,9 @@
 	<!-- Sobre a Mars Shot -->
 	<tr>
 	  <td style="padding:24px 24px 24px 24px; font-size:14px; line-height:1.4; color:#222;" class="text">
-		<h2 style="font-weight:700; font-size:14px; margin:0 0 12px 0; color:#222;">SOBRE A MARS SHOT</h2>
+		<h2 style="font-weight:700; font-size:13px; margin:0 0 12px 0; color:#222;">SOBRE A MARS SHOT</h2>
 
-		<div style="text-align:justify; line-height:1.4; font-size:13px;">
+		<div style="text-align:justify; line-height:1.4; font-size:12px;">
 		  A Mars Shot – Redefining Limits é uma empresa de inovação e transformação digital que coloca a inteligência artificial no centro da estratégia empresarial. A empresa foi fundada por Hugo de Sousa, especialista em corporate innovation, AI e data, ex-Head of Innovation na Capita plc e na BearingPoint UKI, Head of Digital Transformation no Turismo de Portugal, e professor de Inovação na Bayes Business School (City, University of London) e na Nova SBE.<br>
 		  A Mars Shot ajuda organizações de todos os setores a acelerar o desenvolvimento de software, aumentar a produtividade e criar valor de forma contínua e sustentável.
 		</div>
