--- a/RH/indexnewsletter.html
+++ b/RH/indexnewsletter.html
@@ -119,7 +119,7 @@
       <table role="presentation" cellpadding="0" cellspacing="0" border="0" align="center">
         <tr>
           <td bgcolor="#5b099b" style="border-radius:4px;mso-padding-alt:0 28px 0 28px;">
-            <a href="https://calendar.app.google/YJMqP9oV27dJ24PYA" target="_blank" rel="noopener"
+            <a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ1HYIh41pqd_cGAcehKVn2bkNybWh45wOa1VJq0JeBfop7KK20EHFWVkoNbaCz8ltWpXEXiDFhn" target="_blank" rel="noopener"
                style="display:inline-block;padding:14px 28px;font-family:'Inter',Arial,sans-serif;font-size:16px;font-weight:700;color:#ffffff;text-decoration:none;border-radius:4px;">
               Agendar&nbsp;Reunião&nbsp;de&nbsp;30&nbsp;m&nbsp;Para&nbsp;Saber&nbsp;Mais
             </a>
