--- a/Academia/NewsletterAcademia.html
+++ b/Academia/NewsletterAcademia.html
@@ -5,107 +5,120 @@
 	  <meta charset="utf-8">
 	  <meta name="viewport" content="width=device-width,initial-scale=1.0">
 	  <title>Mars Shot Newsletter - Digital Executive Academy</title>
-
-	  <!-- Web‑fonts -->
-	  <link rel="preconnect" href="https://fonts.googleapis.com">
-	  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+	  <!--[if !mso]><!-- -->
+	  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	  <!--<![endif]-->
+	  <!-- Preheader for Mailchimp -->
+	  <style type="text/css">
+	    .preheader { display:none!important; visibility:hidden; opacity:0; color:transparent; height:0; width:0; }
+	  </style>
 	</head>
 
-	<body style="margin:0;padding:0;background:#f5f5f5;font-family:'Inter',Arial,'Helvetica Neue',Helvetica,sans-serif;">
+	<body style="margin:0;padding:0;background:#f5f5f5;background-color:#f5f5f5;font-family:Arial,'Helvetica Neue',Helvetica,sans-serif;">
+	<span class="preheader">Como é que a Inteligência Artificial pode ajudar o seu negócio? | Digital Executive Academy 2.ª Edição</span>
 	<table role="presentation" cellpadding="0" cellspacing="0" border="0" width="600" style="width:100%;max-width:600px;margin:0 auto;background:#ffffff;" class="wrapper">
-
+	  <!-- View in browser link -->
+	  <tr>
+		<td style="padding:8px 20px 0 20px;text-align:right;font-size:12px;color:#888;">
+		  <a href="*|ARCHIVE|*" style="color:#888;text-decoration:underline;">Ver no browser</a>
+		</td>
+	  </tr>
 	  <!-- Header principal -->
 	  <tr>
 		<td style="padding:40px 20px 24px 20px;text-align:center;background:#5b099b;">
 		  <a href="https://marsshot.eu" target="_blank" rel="noopener" style="text-decoration:none;">
-			<div style="color:#ffffff;font-family:'Playfair Display',Georgia,serif;font-size:36px;font-weight:700;letter-spacing:1px;margin-bottom:4px;">
-			  mars shot
-			</div>	
-			<div style="color:#e0d4ff;font-size:16px;letter-spacing:2px;text-transform:uppercase;margin-bottom:24px;">
-			  REDEFINING LIMITS
-			</div>
+			<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0">
+			  <tr>
+				<td style="color:#ffffff;font-family:Arial,'Helvetica Neue',Helvetica,sans-serif;font-size:36px;font-weight:bold;letter-spacing:1px;padding-bottom:4px;text-align:center;">
+				  mars shot
+				</td>
+			  </tr>
+			  <tr>
+				<td style="color:#e0d4ff;font-size:16px;letter-spacing:2px;text-transform:uppercase;padding-bottom:24px;text-align:center;">
+				  REDEFINING LIMITS
+				</td>
+			  </tr>
+			</table>
 		  </a>
 		</td>
 	  </tr>
-
 	  <!-- Espaçador -->
 	  <tr><td style="height:32px;"></td></tr>
-
 	  <!-- Conteúdo principal -->
 	  <tr>
-		<td style="padding:0 30px 30px 30px;font-size:16px;line-height:1.6;color:#222;text-align:justify;" class="text">
-		  <h2 style="font-weight:700;text-align:center;font-size:22px;margin:0 0 16px 0;color:#222;">🚀 Digital Executive Academy — 2.ª Edição</h2>
-		  <div style="text-align:center;font-size:16px;font-style:italic;margin-bottom:24px;">Como é que a Inteligência Artificial pode ajudar o seu negócio?</div>
-		  <hr style="border:none;border-top:1px solid #e0d4ff;margin:24px 0;">
-		  <h3 style="font-size:17px;font-weight:700;margin:0 0 16px 0;">Por que deve participar?</h3>
-		  <ul style="list-style:none;margin:0 0 24px 0;padding-left:0;text-align:justify;">
-			<li style="margin-bottom:12px;">
-			  <strong>✅ Conheça casos reais de aplicação</strong><br>Descubra como organizações de referência estão já a utilizar a IA para transformar operações, criar novos produtos e gerar vantagem competitiva.
-			</li>
-			<li style="margin-bottom:12px;">
-			  <strong>✅ Detecte oportunidades na sua organização</strong><br>Através de exercícios guiados, identifique processos onde a IA possa acrescentar valor imediato e mensurável.
-			</li>
-			<li style="margin-bottom:12px;">
-			  <strong>✅ Explore ferramentas de fácil utilização</strong><br>Descubra plataformas <em>no-code/low-code</em> que lhe permitem criar soluções sem programar.
-			</li>
-			<li style="margin-bottom:12px;">
-			  <strong>✅ Desenvolva uma aplicação de IA</strong><br>Siga um guia passo a passo para desenvolver uma aplicação prática sem necessitar de conhecimentos técnicos avançados.
-			</li>
-			<li style="margin-bottom:12px;">
-			  <strong>✅ Partilhe experiências com outros líderes empresariais</strong><br>Partilhe desafios, boas práticas e <i>insights</i> com profissionais de gestão de diversos sectores, num ambiente dinâmico e interativo
-			</li>
-		  </ul>
-		
-		  <!-- Banner CEO -->
-		  <div style="padding:0;text-align:center;background:#e6e0f2;margin-bottom:0;">
-			<img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/academia_banner.png" alt="Banner com o CEO Hugo de Sousa" width="600" height="300" style="display:block;width:100%;height:auto;line-height:0;border:0;">
-		  </div>
-		  <div style="padding:8px 24px;text-align:center;font-size:12px;color:#666;line-height:1.4;margin-bottom:0;">
-			Mars Shot - CEO - Hugo de Sousa
-		  </div>
-
-		  <div style="text-align:center; margin: 24px 0;">
-			<a href="https://www.marsshot.eu/digitalexecutiveacademy" style="background:#5b099b; color:#fff; padding:14px 28px; border-radius:8px; text-decoration:none; font-weight:600;display:inline-block;">
-			  Quero Inscrever-me na Academia
-			</a>
-		  </div>
-
-		  <hr style="border:none;border-top:1px solid #e0d4ff;margin:24px 0;">
-		  <div style="font-size:15px;line-height:1.7;margin-bottom:18px;text-align:justify;">
-			<span style="font-weight:700;">🗓️ Data:</span> 30 de Julho de 2025 | 09h00-13h00<br>
-			<span style="font-weight:700;">🌐 Formato:</span> 100 % online (ao vivo)<br><br>
-			<span style="font-weight:700;">👤 Formador:</span> <em>Hugo de Sousa</em><br>
-			Especialista em inovação empresarial, transformação digital e inteligência artificial, com 27 anos de experiência. Professor de Inovação na Bayes Business School — City, University of London e na Nova SBE Executive Education.<br><br>
-			<span style="font-weight:700;">💰 Investimento:</span> 300 € + IVA (23 %) por participante<br>
-			<span style="font-weight:700;">👥 Condição especial:</span> 10 % de desconto a partir do segundo participante da mesma empresa
-		  </div>
-		  
+		<td style="padding:0 30px 30px 30px;font-size:16px;line-height:1.6;color:#222;text-align:justify;">
+		  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0">
+			<tr><td style="text-align:center;font-size:22px;font-weight:bold;margin:0 0 16px 0;color:#222;">🚀 Digital Executive Academy — 2.ª Edição</td></tr>
+			<tr><td style="text-align:center;font-size:16px;font-style:italic;margin-bottom:24px;">Como é que a Inteligência Artificial pode ajudar o seu negócio?</td></tr>
+			<tr><td><hr style="border:none;border-top:1px solid #e0d4ff;margin:24px 0;"></td></tr>
+			<tr><td style="font-size:17px;font-weight:bold;margin:0 0 16px 0;">Por que deve participar?</td></tr>
+			<tr><td>
+			  <ul style="list-style:none;margin:0 0 24px 0;padding-left:0;text-align:justify;">
+				<li style="margin-bottom:12px;"><strong>✅ Conheça casos reais de aplicação</strong><br>Descubra como organizações de referência estão já a utilizar a IA para transformar operações, criar novos produtos e gerar vantagem competitiva.</li>
+				<li style="margin-bottom:12px;"><strong>✅ Detecte oportunidades na sua organização</strong><br>Através de exercícios guiados, identifique processos onde a IA possa acrescentar valor imediato e mensurável.</li>
+				<li style="margin-bottom:12px;"><strong>✅ Explore ferramentas de fácil utilização</strong><br>Descubra plataformas <em>no-code/low-code</em> que lhe permitem criar soluções sem programar.</li>
+				<li style="margin-bottom:12px;"><strong>✅ Desenvolva uma aplicação de IA</strong><br>Siga um guia passo a passo para desenvolver uma aplicação prática sem necessitar de conhecimentos técnicos avançados.</li>
+				<li style="margin-bottom:12px;"><strong>✅ Partilhe experiências com outros líderes empresariais</strong><br>Partilhe desafios, boas práticas e <i>insights</i> com profissionais de gestão de diversos sectores, num ambiente dinâmico e interativo</li>
+			  </ul>
+			</td></tr>
+			<!-- Banner CEO -->
+			<tr><td style="padding:0;text-align:center;background:#e6e0f2;margin-bottom:0;">
+			  <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/academia_banner.png" alt="Banner com o CEO Hugo de Sousa" width="600" height="300" style="display:block;width:100%;height:auto;line-height:0;border:0;" />
+			</td></tr>
+			<tr><td style="padding:8px 24px;text-align:center;font-size:12px;color:#666;line-height:1.4;margin-bottom:0;">Mars Shot - CEO - Hugo de Sousa</td></tr>
+			<tr><td style="text-align:center; margin: 24px 0;">
+			  <a href="https://www.marsshot.eu/digitalexecutiveacademy" style="background:#5b099b; color:#fff; padding:14px 28px; border-radius:8px; text-decoration:none; font-weight:bold;display:inline-block;">Quero Inscrever-me na Academia</a>
+			</td></tr>
+			<tr><td><hr style="border:none;border-top:1px solid #e0d4ff;margin:24px 0;"></td></tr>
+			<tr><td style="font-size:15px;line-height:1.7;margin-bottom:18px;text-align:justify;">
+			  <span style="font-weight:bold;">🗓️ Data:</span> 30 de Julho de 2025 | 09h00-13h00<br>
+			  <span style="font-weight:bold;">🌐 Formato:</span> 100 % online (ao vivo)<br><br>
+			  <span style="font-weight:bold;">👤 Formador:</span> <em>Hugo de Sousa</em><br>
+			  Especialista em inovação empresarial, transformação digital e inteligência artificial, com 27 anos de experiência. Professor de Inovação na Bayes Business School — City, University of London e na Nova SBE Executive Education.<br><br>
+			  <span style="font-weight:bold;">💰 Investimento:</span> 300 € + IVA (23 %) por participante<br>
+			  <span style="font-weight:bold;">👥 Condição especial:</span> 10 % de desconto a partir do segundo participante da mesma empresa
+			</td></tr>
+		  </table>
 		</td>
 	  </tr>
-
-	  
 	  <!-- Rodapé -->
 	  <tr>
-		<td style="padding:32px 24px;text-align:center;background:#ffffff;font-family:'Inter',Arial,'Helvetica Neue',Helvetica,sans-serif;">
+		<td style="padding:32px 24px;text-align:center;background:#ffffff;font-family:Arial,'Helvetica Neue',Helvetica,sans-serif;">
 		  <a href="https://marsshot.eu" target="_blank" rel="noopener" style="text-decoration:none;">
-			<div style="font-size:16px;font-weight:700;color:#000;margin-bottom:8px;">Mars Shot — AI Hub by Unicorn Factory Lisboa</div>
+			<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0">
+			  <tr>
+				<td style="font-size:16px;font-weight:bold;color:#000;margin-bottom:8px;text-align:center;">Mars Shot — AI Hub by Unicorn Factory Lisboa</td>
+			  </tr>
+			</table>
 		  </a>
-		  <div style="font-size:14px;color:#000;line-height:1.4;margin-bottom:4px;">Rua João Saraiva 38 | 1700-051 Lisboa, Portugal</div>
-		  <div style="font-size:14px;color:#000;line-height:1.4;margin-bottom:16px;">
-			<a href="mailto:marcia@marsshot.eu" style="color:#000;text-decoration:none;">marcia@marsshot.eu</a> | <a href="tel:+351918609598" style="color:#000;text-decoration:none;">+351 918 609 598</a>
-		  </div>
-		  <div style="margin-top:12px;">
-			<a href="https://www.linkedin.com/company/marsshoteu/posts/?feedView=all" target="_blank" rel="noopener" style="display:inline-block;margin:0 8px;">
-			  <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-linkedin-50.png" alt="LinkedIn" width="24" height="24" style="border:0;display:inline-block;vertical-align:middle;">
-			</a>
-			<a href="https://wa.me/351916084991" target="_blank" rel="noopener" style="display:inline-block;margin:0 8px;">
-			  <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-whatsapp-50.png" alt="WhatsApp" width="24" height="24" style="border:0;display:inline-block;vertical-align:middle;">
-			</a>
-			<a href="https://www.youtube.com/@wearemarsshot" target="_blank" rel="noopener" style="display:inline-block;margin:0 8px;">
-			  <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-youtube-50.png" alt="YouTube" width="24" height="24" style="border:0;display:inline-block;vertical-align:middle;">
-			</a>
-		  </div>
+		  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0">
+			<tr>
+			  <td style="font-size:14px;color:#000;line-height:1.4;margin-bottom:4px;text-align:center;">Rua João Saraiva 38 | 1700-051 Lisboa, Portugal</td>
+			</tr>
+			<tr>
+			  <td style="font-size:14px;color:#000;line-height:1.4;margin-bottom:16px;text-align:center;">
+				<a href="mailto:marcia@marsshot.eu" style="color:#000;text-decoration:none;">marcia@marsshot.eu</a> | <a href="tel:+351918609598" style="color:#000;text-decoration:none;">+351 918 609 598</a>
+			  </td>
+			</tr>
+			<tr>
+			  <td style="text-align:center;margin-top:12px;">
+				<a href="https://www.linkedin.com/company/marsshoteu/posts/?feedView=all" target="_blank" rel="noopener" style="display:inline-block;margin:0 8px;">
+				  <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-linkedin-50.png" alt="LinkedIn" width="24" height="24" style="border:0;display:inline-block;vertical-align:middle;" />
+				</a>
+				<a href="https://wa.me/351916084991" target="_blank" rel="noopener" style="display:inline-block;margin:0 8px;">
+				  <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-whatsapp-50.png" alt="WhatsApp" width="24" height="24" style="border:0;display:inline-block;vertical-align:middle;" />
+				</a>
+				<a href="https://www.youtube.com/@wearemarsshot" target="_blank" rel="noopener" style="display:inline-block;margin:0 8px;">
+				  <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-youtube-50.png" alt="YouTube" width="24" height="24" style="border:0;display:inline-block;vertical-align:middle;" />
+				</a>
+			  </td>
+			</tr>
+			<tr>
+			  <td style="text-align:center;font-size:12px;color:#888;padding-top:16px;">
+				<a href="*|UNSUB|*" style="color:#888;text-decoration:underline;">Remover subscrição</a>
+			  </td>
+			</tr>
+		  </table>
 		</td>
 	  </tr>
 	</table>
