--- a/CFO/CFO_Newsletter_Mailchimp.html
+++ b/CFO/CFO_Newsletter_Mailchimp.html
@@ -105,7 +105,7 @@
       <table cellpadding="0" cellspacing="0" border="0" align="center">
         <tr>
           <td bgcolor="#5b099b" style="border-radius:8px;padding:0 32px;">
-            <a href="https://calendar.app.google/YJMqP9oV27dJ24PYA" target="_blank" style="display:inline-block;padding:16px 32px;font-size:16px;font-weight:bold;color:#fff;text-decoration:none;border-radius:8px;font-family:Arial, Helvetica, sans-serif;">Agendar Reunião de 30min&nbsp;Para&nbsp;Saber&nbsp;Mais</a>
+            <a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ1HYIh41pqd_cGAcehKVn2bkNybWh45wOa1VJq0JeBfop7KK20EHFWVkoNbaCz8ltWpXEXiDFhn" target="_blank" style="display:inline-block;padding:16px 32px;font-size:16px;font-weight:bold;color:#fff;text-decoration:none;border-radius:8px;font-family:Arial, Helvetica, sans-serif;">Agendar Reunião de 30min&nbsp;Para&nbsp;Saber&nbsp;Mais</a>
           </td>
         </tr>
       </table>
