--- a/CIO/CIO_indexnewsletter.html
+++ b/CIO/CIO_indexnewsletter.html
@@ -144,7 +144,7 @@
 		  <table role="presentation" cellpadding="0" cellspacing="0" border="0" align="center">
 			<tr>
 			  <td bgcolor="#5b099b" style="border-radius:8px;mso-padding-alt:0 32px 0 32px;" class="btn-purple">
-				<a href="https://calendar.app.google/YJMqP9oV27dJ24PYA" target="_blank" rel="noopener" style="display:inline-block;padding:16px 32px;font-family:'Inter',Arial,'Helvetica Neue',Helvetica,sans-serif;font-size:16px;font-weight:700;color:#ffffff;text-decoration:none;border-radius:8px;">
+				<a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ1HYIh41pqd_cGAcehKVn2bkNybWh45wOa1VJq0JeBfop7KK20EHFWVkoNbaCz8ltWpXEXiDFhn" target="_blank" rel="noopener" style="display:inline-block;padding:16px 32px;font-family:'Inter',Arial,'Helvetica Neue',Helvetica,sans-serif;font-size:16px;font-weight:700;color:#ffffff;text-decoration:none;border-radius:8px;">
 				  Agendar reunião de 30min&nbsp;Para&nbsp;Saber&nbsp;Mais
 				</a>
 			  </td>
