Update 14.07 V1 Contabilidade Newsletter1 Mailchimp.html

--- a/Contabilidade/14.07 V1 Contabilidade Newsletter1 Mailchimp.html
+++ b/Contabilidade/14.07 V1 Contabilidade Newsletter1 Mailchimp.html
@@ -103,8 +103,9 @@
           <a href="https://marsshot.eu" target="_blank" style="text-decoration:none">
             <span style="font-weight:bold;font-size:13px;color:#222">SOBRE A MARS SHOT</span>
           </a>
-          <div style="text-align:justify;line-height:1.4;font-size:12px">
-            A <b>Mars Shot – Redefining Limits</b> é especialista em inovação e transformação digital com IA no centro da estratégia empresarial. Fundada por <b>Hugo de Sousa</b> (ex-Head of Innovation na Capita plc &amp; BearingPoint UKI, professor na Bayes Business School e Nova SBE), ajudamos organizações a acelerar o desenvolvimento de software, aumentar a produtividade e criar valor de forma contínua e sustentável.
+          <div style="text-align:justify; line-height:1.4; font-size:12px;">
+            A <strong>Mars Shot – Redefining Limits</strong> é uma empresa de inovação e transformação digital que coloca a inteligência artificial no centro da estratégia empresarial. A empresa foi fundada por <strong>Hugo de Sousa</strong>, especialista em inovação corporativa, IA e dados, ex-Head of Innovation na Capita plc e na BearingPoint UKI, Head of Digital Transformation no Turismo de Portugal, e professor de Inovação na Bayes Business School (City, University of London) e na Nova SBE.<br>
+            A Mars Shot ajuda organizações de todos os sectores a acelerar o desenvolvimento de software, aumentar a produtividade e criar valor de forma contínua e sustentável.
           </div>
         </td>
       </tr>
