--- a/Contabilidade/V3 Contabilidade Newsletter1.html
+++ b/Contabilidade/V3 Contabilidade Newsletter1.html
@@ -78,12 +78,13 @@
         </td>
       </tr>
       <tr>
-        <td align="center" style="padding:32px 24px;background:#ecf9ec">
-          <span style="font-size:16px;font-weight:bold;display:block;margin-bottom:12px;color:#008000">Setores que trabalhamos</span>
+        <td align="center" style="padding:32px 24px;background:#faf8ff">
+          <span style="font-size:16px;font-weight:bold;display:block;margin-bottom:12px;color:#5b099b;">Setores que trabalhamos</span>
           <span>
-            <span style="display:inline-block;margin:0 16px;text-align:center"><img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/setores/banca.png" alt="Banca" width="40" style="display:block;margin:0 auto 4px"><span style="font-size:13px;color:#222">Banca</span></span>
-            <span style="display:inline-block;margin:0 16px;text-align:center"><img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/setores/retalho.png" alt="Grande Distribuição" width="40" style="display:block;margin:0 auto 4px"><span style="font-size:13px;color:#222">Grande Distribuição</span></span>
-            <span style="display:inline-block;margin:0 16px;text-align:center"><img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/setores/saude.png" alt="Saúde" width="40" style="display:block;margin:0 auto 4px"><span style="font-size:13px;color:#222">Saúde</span></span>
+            <span style="display:inline-block;margin:0 16px;text-align:center"><img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/setores/icons8-banking-100.png" alt="Banca" width="40" style="display:block;margin:0 auto 4px"><span style="font-size:13px;color:#222">Banca</span></span>
+            <span style="display:inline-block;margin:0 16px;text-align:center"><img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/setores/icons8-retail-100.png" alt="Grande Distribuição" width="40" style="display:block;margin:0 auto 4px"><span style="font-size:13px;color:#222">Grande Distribuição</span></span>
+            <span style="display:inline-block;margin:0 16px;text-align:center"><img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/setores/icons8-hospital-3-100.png" alt="Saúde" width="40" style="display:block;margin:0 auto 4px"><span style="font-size:13px;color:#222">Saúde</span></span>
+            <span style="display:inline-block;margin:0 16px;text-align:center"><img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/setores/icons8-construction-100.png" alt="Saúde" width="40" style="display:block;margin:0 auto 4px"><span style="font-size:13px;color:#222">Construção</span></span>
           </span>
         </td>
       </tr>
