--- a/Contabilidade/V3 Contabilidade Newsletter1.html
+++ b/Contabilidade/V3 Contabilidade Newsletter1.html
@@ -36,22 +36,17 @@
       </tr>
       <tr>
         <td style="padding:0 30px;font-size:18px;line-height:1.6;color:#222;text-align:center">
-          <span style="font-size:18px;font-weight:bold;display:block;margin-bottom:8px">Como pode a IA libertar o contabilista para outras funções estratégicas</span>
+          <span style="font-size:18px;font-weight:bold;display:block;margin-bottom:8px;white-space:nowrap">Como pode a IA libertar o contabilista para outras funções estratégicas</span>
           <ul style="font-size:15px;line-height:1.6;text-align:left;margin:16px 0 0 0;list-style:none;padding-left:0">
-            <li style="margin-bottom:4px">✔️ Integração automática com a AT, ERP (Primavera, Sage e PHC, SAF-T, Segurança Social Direta)</li>
-            <li style="margin-bottom:4px">✔️ Extração de dados de PDF</li>
-            <li style="margin-bottom:4px">✔️ Previsões de Tesouraria</li>
-            <li style="margin-bottom:4px">✔️ Reconciliações automáticas</li>
-            <li style="margin-bottom:4px">✔️ Dashboard com informação contabilística on-time</li>
-            <li style="margin-bottom:4px">✔️ Automatização do Modelo 22</li>
+            <li style="margin-bottom:4px">✅ Integração automática com a AT, ERP (Primavera, Sage e PHC, SAF-T, Segurança Social Direta)</li>
+            <li style="margin-bottom:4px">✅ Extração de dados de PDF</li>
+            <li style="margin-bottom:4px">✅ Previsões de Tesouraria</li>
+            <li style="margin-bottom:4px">✅ Reconciliações automáticas</li>
+            <li style="margin-bottom:4px">✅ Dashboard com informação contabilística on-time</li>
+            <li style="margin-bottom:4px">✅ Automatização do Modelo 22</li>
           </ul>
-          <span style="font-size:15px;font-weight:bold;display:block;margin:16px 0 16px 0">Transforme o seu gabinete num parceiro estratégico dos clientes.</span>
+          <span style="font-size:15px;font-weight:bold;display:block;margin:16px 0 16px 0">Reduza 80% do trabalho repetitivo e transforme-se num parceiro estratégico.</span>
           <hr style="border:none;border-top:1px solid #008000;margin:24px 0">
-        </td>
-      </tr>
-      <tr>
-        <td style="background:#ecf9ec;border-left:4px solid #008000;padding:16px 24px;font-size:18px;line-height:1.6;color:#222;font-weight:bold;text-align:left">
-          🚀 Com uma transformação digital bem feita, é possível poupar até <b>80 % do trabalho repetitivo</b> da agenda fiscal do contabilista - liberte tempo para estratégia!
         </td>
       </tr>
       <tr>
@@ -65,7 +60,7 @@
           <table cellpadding="0" cellspacing="0" border="0" align="center">
             <tr>
               <td bgcolor="#ecf9ec" style="border-radius:8px;padding:0 32px">
-                <a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ1HYIh41pqd_cGAcehKVn2bkNybWh45wOa1VJq0JeBfop7KK20EHFWVkoNbaCz8ltWpXEXiDFhn" target="_blank" style="display:inline-block;padding:16px 32px;font-size:16px;font-weight:bold;color:#fff;text-decoration:none;border-radius:8px;font-family:Arial,Helvetica,sans-serif;background:#008000">Agendar Reunião 30m para Saber Mais sobre IA</a>
+                <a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ1HYIh41pqd_cGAcehKVn2bkNybWh45wOa1VJq0JeBfop7KK20EHFWVkoNbaCz8ltWpXEXiDFhn" target="_blank" style="display:inline-block;padding:16px 32px;font-size:16px;font-weight:bold;color:#fff;text-decoration:none;border-radius:8px;font-family:Arial,Helvetica,sans-serif;background:#008000">Agenda Reunião 30m para Saber Mais sobre IA</a>
               </td>
             </tr>
           </table>
@@ -78,13 +73,13 @@
         </td>
       </tr>
       <tr>
-        <td align="center" style="padding:32px 24px;background:#faf8ff">
-          <span style="font-size:16px;font-weight:bold;display:block;margin-bottom:12px;color:#5b099b;">Setores em que trabalhamos</span>
+        <td align="center" style="padding:32px 24px;background:#ecf9ec">
+          <span style="font-size:16px;font-weight:bold;display:block;margin-bottom:12px;color:#008000;">Setores em que trabalhamos</span>
           <span>
-            <span style="display:inline-block;margin:0 16px;text-align:center"><img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-banking-100.png" alt="Banca" width="40" style="display:block;margin:0 auto 4px"><span style="font-size:13px;color:#222">Banca</span></span>
-            <span style="display:inline-block;margin:0 16px;text-align:center"><img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-retail-100.png" alt="Grande Distribuição" width="40" style="display:block;margin:0 auto 4px"><span style="font-size:13px;color:#222">Grande Distribuição</span></span>
-            <span style="display:inline-block;margin:0 16px;text-align:center"><img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-hospital-3-100.png" alt="Saúde" width="40" style="display:block;margin:0 auto 4px"><span style="font-size:13px;color:#222">Saúde</span></span>
-            <span style="display:inline-block;margin:0 16px;text-align:center"><img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-construction-100.png" alt="Saúde" width="40" style="display:block;margin:0 auto 4px"><span style="font-size:13px;color:#222">Construção</span></span>
+            <span style="display:inline-block;margin:0 16px;text-align:center"><img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/Contabilidade/assets/icons8-banking-100.png" alt="Banca" width="40" style="display:block;margin:0 auto 4px"><span style="font-size:13px;color:#222">Banca</span></span>
+            <span style="display:inline-block;margin:0 16px;text-align:center"><img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/Contabilidade/assets/icons8-retail-100.png" alt="Grande Distribuição" width="40" style="display:block;margin:0 auto 4px"><span style="font-size:13px;color:#222">Grande Distribuição</span></span>
+            <span style="display:inline-block;margin:0 16px;text-align:center"><img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/Contabilidade/assets/icons8-hospital-100.png" alt="Saúde" width="40" style="display:block;margin:0 auto 4px"><span style="font-size:13px;color:#222">Saúde</span></span>
+            <span style="display:inline-block;margin:0 16px;text-align:center"><img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/Contabilidade/assets/icons8-construction-100.png" alt="Saúde" width="40" style="display:block;margin:0 auto 4px"><span style="font-size:13px;color:#222">Construção</span></span>
           </span>
         </td>
       </tr>
@@ -95,8 +90,8 @@
           <span style="font-size:14px;color:#000;line-height:1.4;margin-bottom:16px;display:block"><a href="mailto:marcia@marsshot.eu" style="color:#000;text-decoration:none">marcia@marsshot.eu</a> | <a href="tel:+351918609598" style="color:#000;text-decoration:none">+351 918 609 598</a></span>
           <span style="margin-top:12px;display:block">
             <a href="https://www.linkedin.com/company/marsshoteu/posts/?feedView=all" target="_blank" style="display:inline-block;margin:0 8px"><img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/Contabilidade/assets/icons8-linkedin-50.png" alt="LinkedIn" width="24" height="24" style="border:0;display:inline-block;vertical-align:middle"></a>
-            <a href="https://wa.me/351916084991" target="_blank" style="display:inline-block;margin:0 8px"><img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-whatsapp-50.png" alt="WhatsApp" width="24" height="24" style="border:0;display:inline-block;vertical-align:middle"></a>
-            <a href="https://www.youtube.com/@wearemarsshot" target="_blank" style="display:inline-block;margin:0 8px"><img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-youtube-50.png" alt="YouTube" width="24" height="24" style="border:0;display:inline-block;vertical-align:middle"></a>
+            <a href="https://wa.me/351916084991" target="_blank" style="display:inline-block;margin:0 8px"><img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main//Contabilidade/assets/icons8-whatsapp-50.png" alt="WhatsApp" width="24" height="24" style="border:0;display:inline-block;vertical-align:middle"></a>
+            <a href="https://www.youtube.com/@wearemarsshot" target="_blank" style="display:inline-block;margin:0 8px"><img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main//Contabilidade/assets/icons8-youtube-50.png" alt="YouTube" width="24" height="24" style="border:0;display:inline-block;vertical-align:middle"></a>
           </span>
         </td>
       </tr>
