--- a/Contabilidade/V3 Contabilidade Newsletter1.html
+++ b/Contabilidade/V3 Contabilidade Newsletter1.html
@@ -38,7 +38,7 @@
         <td style="padding:0 30px;font-size:18px;line-height:1.6;color:#222;text-align:center">
           <span style="font-size:18px;font-weight:bold;display:block;margin-bottom:8px;white-space:nowrap">Como pode a IA libertar o contabilista para outras funções estratégicas</span>
           <ul style="font-size:15px;line-height:1.6;text-align:left;margin:16px 0 0 0;list-style:none;padding-left:0">
-            <li style="margin-bottom:4px">✅ Integração automática com a AT, ERP (Primavera, Sage e PHC, SAF-T, Segurança Social Direta)</li>
+            <li style="margin-bottom:4px">✅ Integração automática com a AT, Segurança Social Direta, ERP (Primavera, Sage e PHC, SAF-T)</li>
             <li style="margin-bottom:4px">✅ Extração de dados de PDF</li>
             <li style="margin-bottom:4px">✅ Previsões de Tesouraria</li>
             <li style="margin-bottom:4px">✅ Reconciliações automáticas</li>
@@ -60,7 +60,7 @@
           <table cellpadding="0" cellspacing="0" border="0" align="center">
             <tr>
               <td bgcolor="#ecf9ec" style="border-radius:8px;padding:0 32px">
-                <a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ1HYIh41pqd_cGAcehKVn2bkNybWh45wOa1VJq0JeBfop7KK20EHFWVkoNbaCz8ltWpXEXiDFhn" target="_blank" style="display:inline-block;padding:16px 32px;font-size:16px;font-weight:bold;color:#fff;text-decoration:none;border-radius:8px;font-family:Arial,Helvetica,sans-serif;background:#008000">Agenda Reunião 30m para Saber Mais sobre IA</a>
+                <a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ1HYIh41pqd_cGAcehKVn2bkNybWh45wOa1VJq0JeBfop7KK20EHFWVkoNbaCz8ltWpXEXiDFhn" target="_blank" style="display:inline-block;padding:16px 32px;font-size:16px;font-weight:bold;color:#fff;text-decoration:none;border-radius:8px;font-family:Arial,Helvetica,sans-serif;background:#008000">Agende Reunião 30m para Saber Mais sobre IA</a>
               </td>
             </tr>
           </table>
