--- a/Inutilometro/InutilometroV1.html
+++ b/Inutilometro/InutilometroV1.html
@@ -84,7 +84,7 @@
   </tr>
 
   <td align="center" style="padding:32px 24px;background:#faf8ff">
-    <span style="font-size:16px;font-weight:bold;display:block;margin-bottom:12px;color:#5b099b;">Setores que trabalhamos</span>
+    <span style="font-size:16px;font-weight:bold;display:block;margin-bottom:12px;color:#5b099b;">Setores em que trabalhamos</span>
     <span>
       <span style="display:inline-block;margin:0 16px;text-align:center;">
         <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-banking-100.png" alt="Banca" width="40" style="display:block;margin:0 auto 4px;">
