--- a/Inutilometro/InutilometroV3.html
+++ b/Inutilometro/InutilometroV3.html
@@ -85,7 +85,7 @@
         <td align="center" style="padding:32px 24px;background:#faf8ff">
           <span style="font-size:16px;font-weight:bold;display:block;margin-bottom:12px;color:#5b099b;">Setores em que trabalhamos</span>
           <span style="display:inline-block;margin:0 16px;text-align:center;">
-            <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-services-100.png" alt="Ícone Construção" width="40" style="display:block;margin:0 auto 4px;max-width:40px;width:100%;height:auto;">
+            <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-service-100.png" alt="Ícone Serviços" width="40" style="display:block;margin:0 auto 4px;max-width:40px;width:100%;height:auto;">
             <span style="font-size:13px;color:#222;">Serviços</span>
           </span>
           <span>
@@ -106,7 +106,7 @@
               <span style="font-size:13px;color:#222;">Construção</span>
             </span>
             <span style="display:inline-block;margin:0 16px;text-align:center;">
-              <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-tourism-100.png" alt="Ícone Construção" width="40" style="display:block;margin:0 auto 4px;max-width:40px;width:100%;height:auto;">
+              <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-tourism-100.png" alt="Ícone Turismo" width="40" style="display:block;margin:0 auto 4px;max-width:40px;width:100%;height:auto;">
               <span style="font-size:13px;color:#222;">Turismo</span>
             </span>
           </span>
