--- a/Inutilometro/InutilometroV3.html
+++ b/Inutilometro/InutilometroV3.html
@@ -82,33 +82,31 @@
       </tr>
       <!-- Setores -->
       <tr>
-        <td align="center" style="padding:32px 24px;background:#faf8ff">
-          <span style="font-size:16px;font-weight:bold;display:block;margin-bottom:12px;color:#5b099b;">Setores em que trabalhamos</span>
-          <span style="display:inline-block;margin:0 16px;text-align:center;">
+        <td align="center" style="padding:32px 24px;background:#faf8ff;font-size:0;">
+          <span style="font-size:16px;font-weight:bold;display:block;margin-bottom:12px;color:#5b099b;font-size:16px;">Setores em que trabalhamos</span>
+          <span style="display:inline-block;margin:0 6px;text-align:center;font-size:13px;">
             <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-service-100.png" alt="Ícone Serviços" width="40" style="display:block;margin:0 auto 4px;max-width:40px;width:100%;height:auto;">
-            <span style="font-size:13px;color:#222;">Serviços</span>
-          </span>
-          <span>
-            <span style="display:inline-block;margin:0 16px;text-align:center;">
-              <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-banking-100.png" alt="Ícone Banca" width="40" style="display:block;margin:0 auto 4px;max-width:40px;width:100%;height:auto;">
-              <span style="font-size:13px;color:#222;">Banca</span>
-            </span>
-            <span style="display:inline-block;margin:0 16px;text-align:center;">
-              <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-retail-100.png" alt="Ícone Grande Distribuição" width="40" style="display:block;margin:0 auto 4px;max-width:40px;width:100%;height:auto;">
-              <span style="font-size:13px;color:#222;">Grande Distribuição</span>
-            </span>
-            <span style="display:inline-block;margin:0 16px;text-align:center;">
-              <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-hospital-3-100.png" alt="Ícone Saúde" width="40" style="display:block;margin:0 auto 4px;max-width:40px;width:100%;height:auto;">
-              <span style="font-size:13px;color:#222;">Saúde</span>
-            </span>
-            <span style="display:inline-block;margin:0 16px;text-align:center;">
-              <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-construction-100.png" alt="Ícone Construção" width="40" style="display:block;margin:0 auto 4px;max-width:40px;width:100%;height:auto;">
-              <span style="font-size:13px;color:#222;">Construção</span>
-            </span>
-            <span style="display:inline-block;margin:0 16px;text-align:center;">
-              <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-tourism-100.png" alt="Ícone Turismo" width="40" style="display:block;margin:0 auto 4px;max-width:40px;width:100%;height:auto;">
-              <span style="font-size:13px;color:#222;">Turismo</span>
-            </span>
+            <span style="color:#222;">Serviços</span>
+          </span><!--
+          --><span style="display:inline-block;margin:0 6px;text-align:center;font-size:13px;">
+            <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-banking-100.png" alt="Ícone Banca" width="40" style="display:block;margin:0 auto 4px;max-width:40px;width:100%;height:auto;">
+            <span style="color:#222;">Banca</span>
+          </span><!--
+          --><span style="display:inline-block;margin:0 6px;text-align:center;font-size:13px;">
+            <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-retail-100.png" alt="Ícone Grande Distribuição" width="40" style="display:block;margin:0 auto 4px;max-width:40px;width:100%;height:auto;">
+            <span style="color:#222;">Grande Distribuição</span>
+          </span><!--
+          --><span style="display:inline-block;margin:0 6px;text-align:center;font-size:13px;">
+            <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-hospital-3-100.png" alt="Ícone Saúde" width="40" style="display:block;margin:0 auto 4px;max-width:40px;width:100%;height:auto;">
+            <span style="color:#222;">Saúde</span>
+          </span><!--
+          --><span style="display:inline-block;margin:0 6px;text-align:center;font-size:13px;">
+            <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-construction-100.png" alt="Ícone Construção" width="40" style="display:block;margin:0 auto 4px;max-width:40px;width:100%;height:auto;">
+            <span style="color:#222;">Construção</span>
+          </span><!--
+          --><span style="display:inline-block;margin:0 6px;text-align:center;font-size:13px;">
+            <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/main_assets/icons8-tourism-100.png" alt="Ícone Turismo" width="40" style="display:block;margin:0 auto 4px;max-width:40px;width:100%;height:auto;">
+            <span style="color:#222;">Turismo</span>
           </span>
         </td>
       </tr>
