--- a/Inutilometro/InutilometroV4.html
+++ b/Inutilometro/InutilometroV4.html
@@ -48,7 +48,7 @@
           </a>
         </td>
       </tr>
-      <!-- Spacer -->
+      <!-- Espaço entre header e conteúdo principal -->
       <tr>
         <td style="height:32px;"></td>
       </tr>
@@ -64,8 +64,16 @@
             <li style="margin-bottom:8px;">✔️ Erros e retrabalho que afetam todos — e nem sempre chegam à gestão</li>
             <li style="margin-bottom:8px;">✔️ Recursos que podiam estar a ser investidos… em melhores salários, formação ou bem-estar</li>
           </ul>
-          <p style="margin:0 0 16px 0;">Se quiser fazer parte da mudança, começe por aqui: preencha o Inutilómetro com os processos inúteis do seu dia-a-dia.<br>Diga-nos o que precisa de mudar. Porque ninguém devia sentir que está a desperdiçar a vida no trabalho.</p>
+          <p style="margin:0 0 16px 0;">Se quiser fazer parte da mudança, começe por aqui: preencha o Inutilómetro com os processos inúteis do seu dia-a-dia.<br><br>Diga-nos o que precisa de mudar. Porque ninguém devia sentir que está a desperdiçar a vida no trabalho.</p>
           <p style="margin:0 0 0 0;font-weight:bold;font-size:17px;">👉 <a href="https://www.inutilometro.pt" target="_blank" rel="noopener" style="color:#5b099b;text-decoration:underline;">www.inutilometro.pt</a></p>
+        </td>
+      </tr>
+      <!-- Imagem Inutilómetro -->
+      <tr>
+        <td style="padding:12px 0 16px 0;text-align:center;background:#ffffff;">
+          <a href="https://www.inutilometro.pt" target="_blank" rel="noopener" style="font-size:16px;font-weight:bold;line-height:1.4;padding:12px 28px;">
+          <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/Inutilometro/inutilometro.png" alt="Inutilómetro" style="width:100%;height:auto;display:block;margin:0 auto;">
+          </a>
         </td>
       </tr>
       <!-- CTA primário -->
@@ -80,6 +88,18 @@
           </table>
         </td>
       </tr>
+      <!-- Sobre a Mars Shot -->
+  <tr>
+    <td style="padding:12px 24px 12px 24px; font-size:14px; line-height:1.4; color:#222;" class="text">
+      <a href="https://marsshot.eu" target="_blank" rel="noopener" style="text-decoration:none;">
+      <h2 style="font-weight:700; font-size:13px; margin:0 0 12px 0; color:#222;">SOBRE A MARS SHOT</h2>
+      </a>
+      <div style="text-align:justify; line-height:1.4; font-size:12px;">
+        A Mars Shot – Redefining Limits é uma empresa de inovação e transformação digital que coloca a inteligência artificial no centro da estratégia empresarial. A empresa foi fundada por Hugo de Sousa, especialista em corporate innovation, AI e data, ex-Head of Innovation na Capita plc e na BearingPoint UKI, Head of Digital Transformation no Turismo de Portugal, e professor de Inovação na Bayes Business School (City, University of London) e na Nova SBE.<br>
+        A Mars Shot ajuda organizações de todos os setores a acelerar o desenvolvimento de software, aumentar a produtividade e criar valor de forma contínua e sustentável.
+      </div>
+    </td>
+  </tr>
       <!-- Setores -->
       <tr>
         <td align="center" style="padding:32px 24px;background:#faf8ff">
